[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emqf"
version = "0.0.1"
readme = "README.md"
dependencies = [
  "numpy",
  "scipy",
]

    [project.optional-dependencies]
    examples = ["matplotlib"]
    build = ["build", "twine"]
    dev   = ["black"]

    [project.urls]
    repository    = "https://github.com/raphaelw/emqf-filter-design"
    documentation = "https://github.com/raphaelw/emqf-filter-design/blob/main/README.md"